test/functions/ferguson/query/query-generic-star-tuple-error.good
query-generic-star-tuple-error.chpl:17: error: unresolved call 'f((Wrapper(int(64)),Wrapper(_owned(GenericClass(int(64))))))'
query-generic-star-tuple-error.chpl:10: note: candidates are: f(x: 2*Wrapper)
query-generic-star-tuple-error.chpl:7: note:                 Wrapper.f
